# Peru-BioRisk-AI

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cdc_peru.py  config.example.yaml  data_dictionary.md  docker-compose.yml  era5.py  feature_engineering.py  geobosques.py  main.py  modis.py  pyproject.toml  requirements.txt  run_demo_etl.py  senamhi.py  test_pipeline.py  train.py  weekly_pipeline.py
src/etl/: pipeline.py
